<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reInputPassword"
        android:textSize="20dp" />

    <EditText
        android:id="@+id/oldPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/inputNewPassword"
    	android:layout_marginTop="20dp" 
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/newPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reInputPassword" 
    	android:layout_marginTop="20dp" 
        android:textSize="20dp"/>

    <EditText
        android:id="@+id/reIntputNewPasswordEdit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/okButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
    		android:layout_marginTop="20dp" 
            android:text="@string/determine" />

    </RelativeLayout>

</LinearLayout>
